<resources>
    <string name="app_name">mj</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="send_off">The Great Story Awaits...</string>
    <string name="noun">noun</string>
    <string name="adverb">adverb</string>
    <string name="random">random</string>
    <string name="verb">verb</string>
    <string name="adjective">adjective</string>
    <string name="random2">random2</string>
    <string name="random3">random3</string>
    <string name="random4">random4</string>
    <string name="A">Once MDog had stepped with the manager past the</string>
    <string name="B">yellow mist, he was met with an extremely large</string>
    <string name="C">it took a slash at him but he barely dodged due to his catlike reflexes.</string>
    <string name="D">The manager tried to</string>
    <string name="E">the creature to no avail.</string>
    <string name="F">MDog stood up, and let out a mighty</string>
    <string name="G">hoping to stun the creature but was met with the creatures mighty</string>
    <string name="H">The creature then attacked the manager</string>
    <string name="I">with its large</string>
    <string name="J">but MDog blocked it.</string>
    <string name="K">Having no other option, MDog gathered</string>
    <string name="L">this was his lat resort, but at the last moment he</string>
</resources>